MVC model is ready

--- a/playground/people/edo888/admin/languages/en-GB.com_wcp.ini
+++ b/playground/people/edo888/admin/languages/en-GB.com_wcp.ini
@@ -3,3 +3,6 @@
 # License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
+Apply Patch=Apply Patch
+Childs=Childs
+WCP Manager=WCP Manager
