Added exclude list for files and tables, which shouldn't be copied to the child

--- a/playground/people/edo888/languages/en-GB.com_wcp.ini
+++ b/playground/people/edo888/languages/en-GB.com_wcp.ini
@@ -4,6 +4,7 @@
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
 Apply Patch=Apply Patch
+EXEC_TIME_WARNING=Max execution time is set to %s seconds. If you are not sure that the server will manage to copy all the files on time, select No here and copy files manually.
 Childs=Childs
 Master=Master
 WCP Manager=WCP Manager
