--- a/playground/people/edo888/languages/en-GB.com_wcp.ini
+++ b/playground/people/edo888/languages/en-GB.com_wcp.ini
@@ -8,3 +8,4 @@ EXEC_TIME_WARNING=Max execution time is set to %s seconds. If you are not sure t
 Childs=Childs
 Master=Master
 WCP Manager=WCP Manager
+WCP_DESCRIPTION=This component manages working copies of the live site.<br /><br /><br />This program is distributed in the hope that it will be useful,<br />but WITHOUT ANY WARRANTY; without even the implied warranty of<br />MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the<br />GNU General Public License for more details.
