Added some language strings

--- a/playground/people/edo888/languages/en-GB.com_wcp.ini
+++ b/playground/people/edo888/languages/en-GB.com_wcp.ini
@@ -5,7 +5,29 @@
 
 Apply Patch=Apply Patch
 EXEC_TIME_WARNING=Max execution time is set to %s seconds. If you are not sure that the server will manage to copy all the files on time, select No here and copy files manually.
-Childs=Childs
+Cannot connect to the child database=Cannot connect to the child database
+Connot connect to the child for re-configuring it=Connot connect to the child for re-configuring it
+Cannot connect to child database to delete tables=Cannot connect to child database to delete tables
+Cannot connect to master databasa for synchronizing the child=Cannot connect to master databasa for synchronizing the child
+Cannot connect to master database to get database differences=Cannot connect to master database to get database differences
+Cannot upload the file=Cannot upload the file
+Childs=Children
+Child created successfully=Child created successfully
+Child info saved successfully=Child info saved successfully
+Child(s) deleted successfully=Child(ren) deleted successfully
+Childs merged successfully=Children merged successfully
+Commit completed=Commit completed
+Download Patch=Download Patch
+Download will start automatically=Download will start automatically
+Revert completed=Revert completed
+Select 2 childs at a time=Select 2 childs at a time
+Start download manually=Start download manually
+Synchronization proccess completed=Synchronization proccess completed
+List Refreshed=List Refreshed 
 Master=Master
+No file selected=No file selected
+Patch Applied Successfully=Patch Applied Successfully
+You still need to copy all the tables to the child database manually.=You still need to copy all the tables to the child database manually.
+You still need to copy all the files to the child directory manually.=You still need to copy all the files to the child directory manually.
 WCP Manager=WCP Manager
 WCP_DESCRIPTION=This component manages working copies of the live site.<br/><br/><font style="font-weight:normal;">Visit my website for more Joomla! extensions: <a href="http://edo.webmaster.am" target="_blank">http://edo.webmaster.am</a></font><br/><br/><u>Disclaimer of Warranty</u>:<br/><i style="font-weight: normal;">This program is distributed in the hope that it will be useful,<br/>but WITHOUT ANY WARRANTY; without even the implied warranty of<br/>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the<br/>GNU General Public License for more details.</i>
