not running on 1.6 yet

--- a/playground/people/edo888/1.6/languages/en-GB.com_wcp.ini
+++ b/playground/people/edo888/1.6/languages/en-GB.com_wcp.ini
@@ -1,33 +1,33 @@
-# $Id$
-# Copyright (C) 2009 Edvard Ananyan. All rights reserved.
-# License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
-# Note : All ini files need to be saved as UTF-8 - No BOM
+; @version      $Id$
+; @package      Working Copy
+; @copyright    Copyright (C) 2009 - 2010 Edvard Ananyan. All rights reserved.
+; @license      http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 
-Apply Patch=Apply Patch
-EXEC_TIME_WARNING=Max execution time is set to %s seconds. If you are not sure that the server will manage to copy all the files on time, select No here and copy files manually.
-Cannot connect to the child database=Cannot connect to the child database
-Connot connect to the child for re-configuring it=Connot connect to the child for re-configuring it
-Cannot connect to child database to delete tables=Cannot connect to child database to delete tables
-Cannot connect to master databasa for synchronizing the child=Cannot connect to master databasa for synchronizing the child
-Cannot connect to master database to get database differences=Cannot connect to master database to get database differences
-Cannot upload the file=Cannot upload the file
-Childs=Children
-Child created successfully=Child created successfully
-Child info saved successfully=Child info saved successfully
-Child(s) deleted successfully=Child(ren) deleted successfully
-Childs merged successfully=Children merged successfully
-Commit completed=Commit completed
-Download Patch=Download Patch
-Download will start automatically=Download will start automatically
-Revert completed=Revert completed
-Select 2 childs at a time=Select 2 childs at a time
-Start download manually=Start download manually
-Synchronization proccess completed=Synchronization proccess completed
-List Refreshed=List Refreshed 
-Master=Master
-No file selected=No file selected
-Patch Applied Successfully=Patch Applied Successfully
-You still need to copy all the tables to the child database manually.=You still need to copy all the tables to the child database manually.
-You still need to copy all the files to the child directory manually.=You still need to copy all the files to the child directory manually.
-WCP Manager=WCP Manager
-WCP_DESCRIPTION=This component manages working copies of the live site.<br/><br/><font style="font-weight:normal;">Visit my website for more Joomla! extensions: <a href="http://edo.webmaster.am" target="_blank">http://edo.webmaster.am</a></font><br/><br/><u>Disclaimer of Warranty</u>:<br/><i style="font-weight: normal;">This program is distributed in the hope that it will be useful,<br/>but WITHOUT ANY WARRANTY; without even the implied warranty of<br/>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the<br/>GNU General Public License for more details.</i>
+COM_WCP_Apply Patch="Apply Patch"
+COM_WCP_EXEC_TIME_WARNING="Max execution time is set to %s seconds. If you are not sure that the server will manage to copy all the files on time, select No here and copy files manually."
+COM_WCP_Cannot connect to the child database="Cannot connect to the child database"
+COM_WCP_Connot connect to the child for re-configuring it="Connot connect to the child for re-configuring it"
+COM_WCP_Cannot connect to child database to delete tables="Cannot connect to child database to delete tables"
+COM_WCP_Cannot connect to master databasa for synchronizing the child="Cannot connect to master databasa for synchronizing the child"
+COM_WCP_Cannot connect to master database to get database differences="Cannot connect to master database to get database differences"
+COM_WCP_Cannot upload the file="Cannot upload the file"
+COM_WCP_Childs="Children"
+COM_WCP_Child created successfully="Child created successfully"
+COM_WCP_Child info saved successfully="Child info saved successfully"
+COM_WCP_Child(s) deleted successfully="Child(ren) deleted successfully"
+COM_WCP_Childs merged successfully="Children merged successfully"
+COM_WCP_Commit completed="Commit completed"
+COM_WCP_Download Patch="Download Patch"
+COM_WCP_Download will start automatically="Download will start automatically"
+COM_WCP_Revert completed="Revert completed"
+COM_WCP_Select 2 childs at a time="Select 2 childs at a time"
+COM_WCP_Start download manually="Start download manually"
+COM_WCP_Synchronization proccess completed="Synchronization proccess completed"
+COM_WCP_List Refreshed="List Refreshed"
+COM_WCP_Master="Master"
+COM_WCP_No file selected="No file selected"
+COM_WCP_Patch Applied Successfully="Patch Applied Successfully"
+COM_WCP_You still need to copy all the tables to the child database manually.="You still need to copy all the tables to the child database manually."
+COM_WCP_You still need to copy all the files to the child directory manually.="You still need to copy all the files to the child directory manually."
+COM_WCP_WCP Manager="WCP Manager"
+COM_WCP_WCP_DESCRIPTION="This component manages working copies of the live site.<br/><br/><font style=\"font-weight:normal;\">Visit my website for more Joomla! extensions: <a href=\"http://edo.webmaster.am\" target=\"_blank\">http://edo.webmaster.am</a></font><br/><br/><u>Disclaimer of Warranty</u>:<br/><i style=\"font-weight: normal;\">This program is distributed in the hope that it will be useful,<br/>but WITHOUT ANY WARRANTY; without even the implied warranty of<br/>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the<br/>GNU General Public License for more details.</i>"
